// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Loading component matches the snapshots 1`] = `
<div
  className="amp-spinner-container"
>
  <svg
    className="components-spinner css-17rkb14-StyledSpinner ea4tfvq2"
    focusable="false"
    height="16"
    role="presentation"
    viewBox="0 0 100 100"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="css-mx768t-SpinnerTrack-commonPathProps ea4tfvq1"
      cx="50"
      cy="50"
      r="50"
      vectorEffect="non-scaling-stroke"
    />
    <path
      className="css-7c7ebc-SpinnerIndicator-commonPathProps ea4tfvq0"
      d="m 50 0 a 50 50 0 0 1 50 50"
      vectorEffect="non-scaling-stroke"
    />
  </svg>
</div>
`;

exports[`the Loading component matches the snapshots 2`] = `
<span
  className="amp-spinner-container amp-spinner-container--inline"
>
  <svg
    className="components-spinner css-17rkb14-StyledSpinner ea4tfvq2"
    focusable="false"
    height="16"
    role="presentation"
    viewBox="0 0 100 100"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="css-mx768t-SpinnerTrack-commonPathProps ea4tfvq1"
      cx="50"
      cy="50"
      r="50"
      vectorEffect="non-scaling-stroke"
    />
    <path
      className="css-7c7ebc-SpinnerIndicator-commonPathProps ea4tfvq0"
      d="m 50 0 a 50 50 0 0 1 50 50"
      vectorEffect="non-scaling-stroke"
    />
  </svg>
</span>
`;
